fix(problem): fix problem edit page spacing

--- a/src/pages/problem/edit/ProblemEditPage.module.less
+++ b/src/pages/problem/edit/ProblemEditPage.module.less
@@ -7,6 +7,10 @@
   }
 }
 
+.row {
+  padding-bottom: 0 !important;
+}
+
 .typeDropdown {
   margin-left: 15px !important;
 }
@@ -19,6 +23,11 @@
 .localeTabPane {
   border: none !important;
   padding: 2px !important;
+  margin-bottom: 0 !important;
+
+  > :last-child {
+    margin-bottom: 0 !important;
+  }
 }
 
 .boldInput :global(input) {
